adjust banner conditionally; integarate footer and header

--- a/theme.conf
+++ b/theme.conf
@@ -4,9 +4,8 @@ stylesheet = css/styles.css
 pygments_style = pygments.css
 
 [options]
-title = 
 description = 
 author = Siqi Tian
 repo = DasLab
-root = 
 
+collapse_navigation = True
