update image aligh classes; remove title from conf

--- a/theme.conf
+++ b/theme.conf
@@ -1,11 +1,11 @@
 [theme]
 inherit = basic
 stylesheet = css/styles.css
-pygments_style = pygments.css
+pygments_style = css/github-dark.css
 
 [options]
 description = 
 author = Siqi Tian
-repo = DasLab
+github_repo = DasLab
 
 collapse_navigation = True
