ribokit static mode; add sphinx-make.sh

--- a/theme.conf
+++ b/theme.conf
@@ -8,5 +8,6 @@ description =
 author = Siqi Tian
 github_repo = DasLab
 
-collapse_navigation = True
-display_version = True
+collapse_navigation = true
+display_version = true
+ribokit_flag = false
