--- a/theme.conf
+++ b/theme.conf
@@ -7,6 +7,7 @@ pygments_style = css/github-dark.css
 description = 
 author = Siqi Tian
 github_repo = DasLab
+ga_tracker = UA-12345678-9
 
 collapse_navigation = true
 display_version = true
